--- a/submissions/dissertation/sections/goals.tex
+++ b/submissions/dissertation/sections/goals.tex
@@ -25,9 +25,9 @@ These goals will largely be achieved by implementing the mechanism outlined by
 Freeman et al.~\cite{Freeman2017}, albeit with several practical modifications.
 The first three goals cover core functionality of any decentralised prediction
 market, while the fourth is concerned with the tuning of system parameters, in
-order to ensure that users do not manipulate the mechanism. Thus users are
-not only discouraged from attempting to ``game'' the system for personal gain,
-and it is in their best interests to be truthful.
+order to ensure that users do not manipulate the mechanism. Thus, users are
+discouraged from attempting to ``game'' the system for personal gain as it is
+in their best interests to be truthful.
 
 Other non-essential features but highly desirable for strong user experience
 include asynchronous communication with the server in order to display
@@ -44,9 +44,9 @@ when user's receive news about a market's outcome. This is unrealistic in
 practice, since we have no way of knowing how users learn about the outcome of
 an event, nor the accuracy of this source's reporting (particularly important
 for highly subjective bets). Hence we also look to calculate an arbiter's
-average signal accuracy based on an their past reporting history, instead of
-having them estimate one each time they submit a report. This leaves less
-opportunity to game the system, the entire point of implementing this
+average signal accuracy based on their past reporting history, instead of
+having them estimate its accuracy each time they submit a report. This leaves
+less opportunity to game the system, the entire point of implementing this
 prediction market mechanism.
 
 \subsection{Stretch Features}
@@ -55,7 +55,7 @@ With more time, there are plenty of additional features that could be
 implemented to render the system more intuitive and usable. These include the
 option to create different types of markets, particularly categorical ones
 since they would function similarly to binary markets but allow multiple
-related markets to be expressed more succinctly. Furthermore the option to
+related markets to be expressed more succinctly. Furthermore, the option to
 create and sort markets by categories would help users offer their information
 more readily if they are especially interested in a certain topic, say politics
 or sport.
@@ -85,8 +85,8 @@ restrictive. This is a similar issue among all centralised markets, including
 InTrade, PredictIt, and the Hollywood Stock Exchange. While their success can
 be attributed to their narrow focus on a particular topic, it seems more
 interesting to be able to aggregate information from a wider variety of themes,
-sacrificing perhaps some of the predictive accuracy for more widespread
-forecasts to be made.
+sacrificing perhaps some predictive accuracy for more widespread forecasts to
+be made.
 
 Decentralised prediction markets are not a new concept, however current
 examples in the literature lack in the functionality they offer. In the case of
