--- a/submissions/dissertation/sections/management.tex
+++ b/submissions/dissertation/sections/management.tex
@@ -6,7 +6,7 @@
 
 The project has been developed incrementally, with a focus on integrating new
 functionality completely before progressing to new features. This approach is
-well-suited to this project's design: since it comprises of five separate areas
+well-suited to this project's design: since it consists of five separate areas
 which are drawn together at the end, it is possible to focus on implementing a
 feature within one area without it affecting the rest. As a result, testing has
 been performed throughout and ensures that a newer version of the project is
@@ -34,9 +34,9 @@ on his end to ensure their consistency, even with the move online.
 
 \subsection{Scheduling}
 
-There have been few major issues with regards to the scheduling of this
-project, although it undergone a slight change from the timetable in its
-original conception, which was meant to be an implementation of a combinatorial
+There have been few major issues with regard to the scheduling of this project,
+although it undergone a slight change from the timetable in its original
+conception, which was meant to be an implementation of a combinatorial
 prediction market similar to \emph{Predictalot}. Figure~\ref{fig:old-timetable}
 shows the schedule as it was planned at the time of our presentation on the
 project, which was when it was still in its early stages of development. In
