--- a/submissions/dissertation/sections/introduction.tex
+++ b/submissions/dissertation/sections/introduction.tex
@@ -33,8 +33,8 @@ the need for a trusted centre, however with no central moderator bets may
 become ambiguous or their outcomes subjective, and arbiters may still attempt
 to manipulate the outcome of the market for their own gain by submitting false
 reports. It is also important that users continue to act according to their
-true beliefs so we may gather useful information on the events. We base our
-design on the incentive compatible peer prediction mechanism introduced by
+true beliefs, so that we may gather useful information on the events. We base
+our design on the incentive compatible peer prediction mechanism introduced by
 Freeman, Lahaie, and Pennock~\cite{Freeman2017}, which allows us to crowdsource
 market outcomes while incentivising users to act truthfully in all stages of
 the prediction market.
